处理了一些文档